Fixed white bar visible while loading champion info

--- a/app/assets/sass/style.scss
+++ b/app/assets/sass/style.scss
@@ -1,4 +1,5 @@
 /* app css stylesheet */
+
 body {
     background: url("../images/polygonal_bg.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
@@ -20,7 +21,6 @@ html {
     width: 100%;
     height: 60px;
     background-color: #e7e7e7;
-
     div.text-muted {
         margin: 20px 0;
     }
@@ -31,11 +31,13 @@ html {
     margin: 0 !important;
 }
 
-.champion-lore {
+.champion-lore-container {
     background-color: white;
     position: relative;
-    padding: 0 15px 15px;
     @extend .spinner-style;
+    .champion-lore {
+        padding: 0 15px 15px;
+    }
 }
 
 .left-sidebar {
@@ -47,19 +49,16 @@ html {
     .navbar-brand {
         height: 60px;
         padding: 0;
-
         > img {
             height: 100%;
             padding: 10px;
             width: auto;
         }
     }
-
     .nav > li > a {
         padding-top: 20px;
         padding-bottom: 20px;
     }
-
     .navbar-form {
         padding-top: 5px;
     }
@@ -71,6 +70,9 @@ html {
         .skin-thumbnail {
             cursor: pointer;
             padding: 0 0 1px 1px;
+            img {
+                width: 100%;
+            }
         }
     }
 }
@@ -79,7 +81,6 @@ html {
     .champion-list-wrapper {
         position: relative;
         @extend .spinner-style;
-
         .champion-image {
             display: inline-block;
             -webkit-transition: all 0.1s ease;
@@ -87,7 +88,6 @@ html {
             -ms-transition: all 0.1s ease;
             -o-transition: all 0.1s ease;
             transition: all 0.1s ease;
-
             &:hover {
                 -webkit-transform: scale(1.1);
                 -moz-transform: scale(1.1);
@@ -95,7 +95,6 @@ html {
                 -o-transform: scale(1.1);
                 transform: scale(1.1);
             }
-
             img {
                 height: 75px;
                 width: 75px;
